deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django-app
  labels:
    app: my-django-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-django-app
  template:
    metadata:
      labels:
        app: my-django-app
    spec:
      containers:
      - name: my-django-app
        image: my-django-app:latest
        ports:
        - containerPort: 8000
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
