lb2-service.yaml
#service.yml

apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: my-django-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
