ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-django-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.gather.day
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-django-app-service
            port:
              name: http
